fix: improve navbar on mobile devices

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -133,9 +133,13 @@ h2 {
   border-bottom: 1px solid darken(#fefefe, 5);
   margin-bottom: 3rem;
 
+  .info {
+    flex: 1;
+    text-align: right;
+  }
+
   > div {
     @extend %container;
-    width: 100%;
     line-height: 3rem;
     display: flex;
     flex-direction: row;
@@ -146,6 +150,25 @@ h2 {
     font-size: .9rem;
     @media screen and (max-width: 1200px) {
       padding: 0 1rem;
+    }
+  }
+
+  @media screen and (max-width: 770px) {
+    height: 5.125rem;
+    > div {
+      flex-wrap: wrap;
+    }
+    .bar-sorts {
+      margin: -.75rem auto 0;
+      span {
+        display: none;
+      }
+    }
+    .info {
+      margin-top: -.125rem;
+      text-align: center;
+      flex: 0 0 100%;
+      order: -1;
     }
   }
 
@@ -165,11 +188,6 @@ h2 {
     &:hover {
       background: lighten(rgba(#332532, .8), 70);
     }
-  }
-
-  .info {
-    flex: 1;
-    text-align: right;
   }
 }
 
